@@ -1,11 +1,11 @@
 #!/usr/bin/sh
 
-# Usage:  download_papers.sh
+# Usage:  download_pmc_papers.sh
 #
 # History
 #
 # lec	06/02/2025
-#	to run both PMC and Elsevier
+#	to run just the PMC
 #
 
 cd `dirname $0`
@@ -44,11 +44,6 @@ cd pmc
 ${PYTHON} ./download_pmc_papers.py $1 $2 "$3" 2>&1 | tee -a ${LOG}
 cd ${CWD}
 
-# then do Elsevier's SciDirect
-cd elsevier
-${PYTHON} ./download_elsevier_papers.py $1 $2 "$3" 2>&1 | tee -a ${LOG}
-cd ${CWD}
-
 date | tee -a ${LOG}
 
 # mail the two noPdf logs to Nancy for manual processing
@@ -56,16 +51,16 @@ if [ "${MAIL_LOG_CUR}" != "" ]; then
     if [ `hostname` = "bhmgiapp01" ]; then
 	for i in `echo ${MAIL_LOG_CUR} | sed 's/,/ /g'`
 	do
-		if [ -f ${PDFDOWNLOADLOGDIR}/noPdfs.log ]; then
-			mailx -s "pdfdownload - No PDF Log" ${MAIL_LOG_CUR} < ${PDFDOWNLOADLOGDIR}/noPdfs.log
+		if [ -f ${PDFDOWNLOADLOGDIR}/noPdfs_pmc.log ]; then
+			mailx -s "pdfdownload - No PDF Log" ${MAIL_LOG_CUR} < ${PDFDOWNLOADLOGDIR}/noPdfs_pmc.log
 		else
-			echo "No ${PDFDOWNLOADLOGDIR}/noPdfs.log to email" | tee -a ${LOG}
+			echo "No ${PDFDOWNLOADLOGDIR}/noPdfs_pmc.log to email" | tee -a ${LOG}
 		fi
 
-		if [ -f ${PDFDOWNLOADLOGDIR}/embargoedNoPdfs.log ]; then
-			mailx -s "pdfdownload - No PDF Log (Embargoed Journals)" ${MAIL_LOG_CUR} < ${PDFDOWNLOADLOGDIR}/embargoedNoPdfs.log
+		if [ -f ${PDFDOWNLOADLOGDIR}/embargoedNoPdfs_pmc.log ]; then
+			mailx -s "pdfdownload - No PDF Log (Embargoed Journals)" ${MAIL_LOG_CUR} < ${PDFDOWNLOADLOGDIR}/embargoedNoPdfs_pmc.log
 		else
-			echo "No ${PDFDOWNLOADLOGDIR}/embargoedNoPdfs.log to email" | tee -a ${LOG}
+			echo "No ${PDFDOWNLOADLOGDIR}/embargoedNoPdfs_pmc.log to email" | tee -a ${LOG}
 		fi
 	done
     fi
