@@ -1,3 +1,11 @@
+TAG: pdfdownload-6-0-25-10
+DATE: 06/02/2025
+STAFF: lec
+create new scripts so PMC and Elsevier can be run separately
+        modified:   download_papers.sh
+        new file:   download_elsevier_papers.sh
+        new file:   download_pmc_papers.sh
+
 TAG: pdfdownload-6-0-25-9
 DATE: 05/12/2025
 STAFF: lec
